module(name = "proc-macro-link-flags", version = "1")

bazel_dep(name = "rules_rust", version = "0.51.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
  edition = "2021",
  versions = ["1.81.0"],
  rustfmt_version = "nightly/2024-09-06",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Rust dependencies
# https://bazelbuild.github.io/rules_rust/crate_universe_bzlmod.html#crate
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

crate.spec(package = "rust_decimal", version = "=1.34.3", features = ['db-diesel2-postgres'], default_features = False)
crate.spec(package = "rust_decimal_macros", version = "=1.34.2", features = ['default'], default_features = False)

crate.from_specs()
use_repo(crate, "crates")

